# Media-Center_Logic

./: README.md  startCenter.sh
AV_Logic/: AudioDevice.h  CMakeLists.txt  amplifier.cpp  amplifier.h  audioconfigurator.cpp  audioconfigurator.h  audiologic.cpp  audiologic.h  build.sh  devicepool.cpp  devicepool.h  displaydevice.h  displaylogic.cpp  displaylogic.h  hardwareadapter.cpp  hardwareadapter.h  hitachi_cp_wu8450.cpp  hitachi_cp_wu8450.h  irdevice.cpp  irdevice.h  logic.cpp  logic.h  main.cpp  onkyo_tx_nr_900.cpp  onkyo_tx_nr_900.h  onkyors232commands.h  osmc.cpp  osmc.h  pjlink.cpp  pjlink.h  projectorconfigurator.cpp  projectorconfigurator.h  rs232device.cpp  rs232device.h  tcpdevice.h  tcpsocket.cpp  tcpsocket.h  utils.h  volumehandler.cpp  volumehandler.h
AV_Logic/AV_Logic_tests/: AV_Logic_tests.pro  pjlinkserver.h  pjlinktestserver.cpp  pjlinktestserver.h  tst_pjlinktester.cpp
AV_Logic/hardwarehandler/: HardwareHandler.py  README.md  TCPServer.py  runHardwareHandler.sh
AV_Logic/tests/: pjlinktester.cpp
Design/: Media-Center.vpp
hardwarehandler/: HardwareHandler.py  HardwareVolume.py  TCPServer.py
tools/: install_hardware_layer.sh  memory_monitor.py  sync.sh
